# A-local-only-Retrieval-Augmented-Generation-RAG-system-that-ingests-grid-procedures-and-equipment

./: .gitignore  README.md  SECURITY.md  pyproject.toml  rag_grid_chunks.json
data/: telemetry_sample.csv
docs/: equipment_limits.md  grid_policies.md  operator_playbook.md
rag_grid_index/: tfidf.pkl  vectors.npy
src/rag_grid/: __init__.py  __main__.py  app.py  config.py  index.py  ingest.py  llm.py  main.py  retrieve.py  schema.py
src/rag_grid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rag_grid/agents/: __init__.py  controller.py  planner.py  safety.py
src/rag_grid/sim/: __init__.py  constraints.py  grid_model.py
tests/: test_retrieve.py  test_safety.py
